Fix bullet list so text doesn't wrap underneath

--- a/profiles/openenterprise/themes/bella/less/overrides.less
+++ b/profiles/openenterprise/themes/bella/less/overrides.less
@@ -125,6 +125,8 @@ ul.tags {
 				color: @brand-primary;
 				content: "\25AA";
 				padding-right: 10px;
+				position: absolute;
+				left: 20px;
 			}
 		}
 	}
